<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.xmlsoap.org/apk/res-auto">
    
    <item
        android:id="@+id/action_diagnostic"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/generate_diagnostic_report"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear"
        app:showAsAction="never" />
    
</menu>
